<resources>
    <string name="app_name" translatable="false">Immich TV</string>
    <string name="no_firebase_title">Firebase not configured</string>
    <string name="no_firebase_body">Firebase has not been configured for this app. That means no account-specific features are enabled and watch progress is stored locally. To enable Firebase features, refer to the readme file.</string>
    <string name="continue_text">Continue</string>
    <string name="menu_identity">Identity</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="sign_in_error">Error signing in: %1$s</string>
    <string name="empty_username_or_password">Both username and password must be provided</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="onetap_error">One Tap returned an error</string>
    <string name="server_error">Server error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="sign_in_intro">Without any changes, this app uses local authorization (MockAuthClient). You can log in using "%1$s" as the email and any non-empty string as the password. To update the app to use remote auth, see the RemoteAuthClient class.</string>
    <string name="default_home_screen_channel_name">Example Channel</string>
    <string name="default_home_screen_channel_description">An example of a default home screen channel</string>
    <string name="content_type_season_episode">Season %s Episode %s</string>
    <string name="content_type_movie">Movie</string>
    <string name="content_type_clip">Clip</string>
    <string name="retry">Retry</string>
    <string name="go_back">Return to browsing</string>
    <string name="error_title_with_video">Something terrible happened with %s</string>
    <string name="season">%1$s Season %2$s</string>
    <string name="seasonal">Seasonal</string>
    <string name="folders">Folders</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="photos">Photos</string>
    <string name="random">Random</string>
    <string name="people">People</string>
    <string name="recent">Recent</string>
    <string name="albums">Albums</string>
    <string name="timeline">Timeline</string>
    <string name="this_month">This month</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <plurals name="years_ago">
        <item quantity="one">%d year ago</item>
        <item quantity="other">%d years ago</item>
    </plurals>
    <string name="server">Server</string>
    <string name="screensaver">Screensaver</string>
    <string name="debug">Debug</string>
    <string name="donate">Donate</string>
    <string name="use_hd_thumbnails">Use high resolution thumbnails</string>
    <string name="use_hd_thumbnails_text">Use high resolution thumbnails instead of native/full images. Will dramatically speed up loading.</string>
    <string name="show_partner_photos_in_timeline">Show partner photos in timeline</string>
    <string name="show_partner_photos_in_timeline_desc">Include photos shared by your partner in the main timeline, in addition to the photos and search views.</string>
    <string name="albums_sorting_text">Set the order in which albums should appear</string>
    <string name="order">Order</string>
    <string name="photos_sorting_text">Set the order in which photos should appear</string>
    <string name="disable_ssl">Disable SSL Verification</string>
    <string name="disable_ssl_text">Only use this when you have issues with self signed certificates!</string>
    <string name="api_key_text">API key</string>
    <string name="server_url_text">Server URL</string>
    <string name="done">Done</string>
    <string name="scan_qr_below">Scan the QR code below</string>
    <string name="or_enter_code_on_site">Or enter the code on https://immich.giejay.nl</string>
    <string name="metadata">Metadata</string>
    <string name="screensaver_set">Set Immich as screensaver</string>
    <string name="screensaver_set_select_albums_first">Please set your albums to show first!</string>
    <string name="screensaver_not_possible_title">Not possible to set screensaver</string>
    <string name="screensaver_not_possible">Could not start screensaver for Immich because of invalid Hostname/API key</string>
    <string name="close">Close</string>
    <string name="interval">Interval</string>
    <string name="screensaver_interval_desc">Interval of the screensaver</string>
    <string name="show_media_count">Show media count</string>
    <string name="show_media_count_desc_screensaver">Show the number of total items and currently selected item</string>
    <string name="show_description">Show description</string>
    <string name="show_description_screensaver">Show description of asset in screensaver</string>
    <string name="show_album_name">Show album name</string>
    <string name="show_album_name_desc">Show album name of asset in screensaver</string>
    <string name="show_date">Show date</string>
    <string name="show_date_screensaver">Show date of asset in screensaver</string>
    <string name="show_clock">Show clock</string>
    <string name="show_clock_screensaver">Show clock in screensaver</string>
    <string name="slide_new_asset_in">Slide the new asset in</string>
    <string name="slide_new_asset_in_desc">Slide the new asset in when transitioning</string>
    <string name="set_albums_screensaver">Set albums to show in screensaver</string>
    <string name="set_albums_screensaver_desc">Set albums to show in screensaver</string>
    <string name="set_albums_screensaver_error">Set the Immich albums to show in the screensaver settings</string>
    <string name="customize_metadata">Customize metadata</string>
    <string name="configure_metadata_screensaver">Configure what to show in screensaver</string>
    <string name="include_videos">Include videos</string>
    <string name="include_videos_screensaver">Include videos in screensaver</string>
    <string name="play_sound">Play sound</string>
    <string name="play_sound_screensaver">Play sound of videos during screensaver</string>
    <string name="screensaver_type">Screensaver type</string>
    <string name="screensaver_type_desc">What to show: albums, random, recent etc.</string>
    <string name="screensaver_start_now">Start now</string>
    <string name="screensaver_start_now_desc">Start the screensaver now</string>
    <string name="interval_slideshow">Slideshow interval</string>
    <string name="interval_slideshow_desc">Seconds per photo during slideshow. Videos play in full, then advance.</string>
    <string name="slide_animation_speed_ms">Slide animation speed (ms)</string>
    <string name="slide_animation_speed_desc">Slide animation speed in milliseconds</string>
    <string name="show_description_slideshow">Show description</string>
    <string name="show_description_slideshow_desc">Show description of asset in slideshow</string>
    <string name="show_media_count_slideshow">Show media count</string>
    <string name="show_media_count_slideshow_desc">Show the number of total items and currently selected item</string>
    <string name="show_date_slideshow">Show date</string>
    <string name="show_date_slideshow_desc">Show date of asset in slideshow</string>
    <string name="show_date_top_left">Show date top-left</string>
    <string name="show_date_top_left_viewer_desc">Show the asset date as a top-left overlay in the photo/video viewer. Independent of bottom metadata.</string>
    <string name="show_date_top_left_screensaver_desc">Show the asset date as a top-left overlay in the screensaver. Independent of bottom metadata.</string>
    <string name="details_always_on">Always show details</string>
    <string name="details_always_on_desc">Keep bottom metadata always visible in the viewer. When off, Enter shows details and Back hides them after the media controls.</string>
    <string name="show_city">Show city</string>
    <string name="show_city_desc">Show city of asset in slideshow</string>
    <string name="customize_metadata_viewer">Customize metadata</string>
    <string name="configure_metadata_viewer">Configure what to show in viewer</string>
    <string name="merge_portrait_photos">Merge portrait photos</string>
    <string name="merge_portrait_photos_desc">Show two portrait photos next to each other</string>
    <string name="safe_center_crop_max_cutoff_height">Safe Center Crop max cutoff height %</string>
    <string name="safe_center_crop_max_cutoff_height_desc">Maximum percentage to cut off image height if using SafeCenterCrop</string>
    <string name="safe_center_crop_max_cutoff_width">Safe Center Crop max cutoff width %</string>
    <string name="safe_center_crop_max_cutoff_width_desc">Maximum percentage to cut off image width if using SafeCenterCrop</string>
    <string name="photo_transformation">Photo transformation</string>
    <string name="photo_transformation_desc">Photo transformation</string>
    <string name="force_original_video">Force original video</string>
    <string name="force_original_video_desc">Play original video, even when transcode is available</string>
    <string name="dpad_seek_in_video">D-pad seeks in video</string>
    <string name="dpad_seek_in_video_desc">Left/Right seek ~10s in video instead of changing assets. Fast-forward/rewind on the remote always seek. Off by default.</string>
    <string name="load_edited_photo">Load edited photos</string>
    <string name="load_edited_photo_desc">Load the edited version of photos instead of the original</string>
    <string name="zoom_scroll_panoramas">Zoom and Pan Effect</string>
    <string name="zoom_scroll_panoramas_desc">During Slideshows apply zoom and pan effects for single photo pages. Automatically zoom panorama photos to fill the screen and scroll bottom-to-top or left-to-right.</string>
    <string name="zoom_effect_percent">Zoom Effect Amount %</string>
    <string name="zoom_effect_percent_desc">Adjust strength of zoom effect.</string>
    <string name="pan_effect_percent">Pan Effect Amount %</string>
    <string name="pan_effect_percent_desc">Adjust strength of panning effect.</string>
    <string name="photos_in_albums">Photos in albums</string>
    <string name="photos_in_albums_desc_inside">Set the order in which photos should appear inside albums</string>
    <string name="content_type">Content type</string>
    <string name="filter_by_content_type">Filter by content type</string>
    <string name="assets_outside_albums">Assets outside albums</string>
    <string name="assets_outside_albums_desc">Set the order in which assets should appear outside Albums</string>
    <string name="enable_debug_mode">Enable debug mode</string>
    <string name="enable_debug_mode_desc">Enable this if you are experiencing issues.</string>
    <string name="edit_metadata_title">Edit metadata</string>
    <string name="meta_data_type_dialog_title">Type</string>
    <string name="meta_data_type_desc">Type of metadata</string>
    <string name="meta_data_type_title">Type of metadata</string>
    <string name="meta_data_order_dialog_title">Order</string>
    <string name="meta_data_order_desc">Order of metadata</string>
    <string name="meta_data_order_title">Order of metadata</string>
    <string name="meta_data_font_size_title">Font size</string>
    <string name="meta_data_font_size_dialog_title">Font size</string>
    <string name="meta_data_padding_title">Padding</string>
    <string name="meta_data_padding_dialog_title">Padding above and below the item</string>
    <string name="meta_data_delete_desc">Delete item</string>
    <string name="meta_data_save_desc">Save item</string>
</resources>