<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/edit_metadata_title">

    <ListPreference
        android:dialogTitle="@string/meta_data_type_dialog_title"
        android:key="meta_data_item_type"
        android:summary="@string/meta_data_type_desc"
        android:title="@string/meta_data_type_title"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:dialogTitle="@string/meta_data_order_dialog_title"
        android:key="meta_data_item_order"
        android:summary="@string/meta_data_order_desc"
        android:title="@string/meta_data_order_title"
        app:useSimpleSummaryProvider="true" />

    <SeekBarPreference
        android:key="meta_data_item_font_size"
        android:title="@string/meta_data_font_size_title"
        android:max="50"
        android:min="12"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="18"
        android:dialogTitle="@string/meta_data_font_size_dialog_title"
    >
    </SeekBarPreference>

    <SeekBarPreference
        android:key="meta_data_item_padding"
        android:title="@string/meta_data_padding_title"
        android:max="50"
        android:min="0"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="0"
        android:dialogTitle="@string/meta_data_padding_dialog_title"
    >
    </SeekBarPreference>

    <!--    <ListPreference-->
    <!--        android:dialogTitle="Align"-->
    <!--        android:key="meta_data_item_align"-->
    <!--        android:summary="Alignment of metadata"-->
    <!--        android:entries="@array/meta_data_alignment_labels"-->
    <!--        android:entryValues="@array/meta_data_alignment_keys"-->
    <!--        android:title="Alignment of metadata"-->
    <!--        app:useSimpleSummaryProvider="true" />-->

    <Preference android:key="meta_data_delete"
        android:summary="@string/meta_data_delete_desc" />
    <Preference android:key="meta_data_save"
        android:summary="@string/meta_data_save_desc" />
</PreferenceScreen>
